@@ -109,6 +109,7 @@ importFrom(utils,capture.output)
 importFrom(utils,data)
 importFrom(utils,read.csv)
 importFrom(utils,read.delim)
+importFrom(utils,read.table)
 importFrom(utils,str)
 importFrom(utils,write.table)
 useDynLib(RStoolbox)
