@@ -19,6 +19,7 @@ Fixes:
 * `readMeta()` now makes concise bandnames also for Landsat Collection MTL files.
 * fix `radCor()` for Landsat 4 TM (reported by Thomas Day)
 * `classifyQA()` confidence layer for type='water' now correctly returns only confidence levels in [1,3] 
+* enable reading ENVI plot files in ASCII mode with `readSLI()`
 
 Deprecated:
 * `spectralIndices()` index `LSWI` has been deprecated, as it is identical with the now available NDWI2.
